--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "prefix": "k//",
-  "token": "NzAyNjk1NjgxNjAwNzgyNDU3.XqDyWQ.vqVBtJs6b917-OSRiLROoKgevJE",
+  "prefix": "PerFix here",
+  "token": "Token bot",
   "everyoneMention": false,
   "hostedBy": true
 }
